# digital-ledningsregistrering

./: .gitignore  Jenkinsfile  README.md  docker-compose-run-db.yml  docker-compose.yml
.github/workflows/: rust.yml
DJenz_frontend/: .env.local  Dockerfile  package-lock.json  package.json
DJenz_frontend/components/: authenticated.js  layout.js  layout.module.css  unauthenticated.js
DJenz_frontend/pages/: byebye.js  dashboard.js  index.js  kontakt.js  profile.js  signin.js
DJenz_frontend/styles/: contact.module.css  global.css  login.module.css  utils.module.css
doc/diagrams/: architecthure.puml
file_converter_test/: Dockerfile
georeferencing/: main.py
ler_2_broker/: Cargo.toml
ler_2_broker/doc/files/: ler_2_general_flow.puml
ler_2_broker/src/: client.rs  ler_endpoints.rs  main.rs
ler_2_database/: Cargo.toml  Dockerfile  database_info.md  test.json
ler_2_database/doc/files/: create_new_client.puml  database_api_ler_automation.puml
ler_2_database/docker/: build_docker.sh
ler_2_database/docker/deploy/: Dockerfile
ler_2_database/docker/develop/: Dockerfile
ler_2_database/migrations/2021-03-14-181907_create_posts/: up.sql
ler_2_database/migrations/2021-03-23-204423_create_clients/: up.sql
ler_2_database/src/: connection.rs  db.rs  deprecated_connection.rs  logger.rs  main.rs  schema.rs
ler_2_database/src/map/: map_data.rs
ler_2_database/src/sample/: deprecated_handler.rs  deprecated_router.rs  handler.rs  model.rs  repository.rs  router.rs
ler_2_server/: Cargo.toml  backend_info.md
ler_2_server/Docker/: build_docker.sh
(+24 files in other folders)
