[package]
name = "ler_2_broker"
version = "0.1.0"
authors = ["Dennis <ngh1adj95@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "3.3.2", features=["rustls", "rustls"] }
actix-rt = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "*"
env_logger = "*"
lazy_static = "1.4.0"
