[package]
name = "ler_2_database"
version = "0.1.0"
authors = []
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "1.0.0"
actix-multipart = "0.3.0"
actix-cors = "0.5.4"
chrono = { version = "0.4", features = ["serde"]}
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
futures = "0.3.5"
bytes = "0.5.6"
sanitize-filename = "0.2"
rust-argon2 = "0.8"
rand = "0.8.3"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.58"
env_logger = "0.8.3"
log = "0.4.6"
lazy_static = "1.4.0"